--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -57,7 +57,7 @@
                             <td>{{assigned.TaskName}}</td>
                             <!-- <td>{{assigned.Stage}}</td> -->
                             <!-- <td>{{assigned.assignedGroup}}</td> -->
-                            <td>{{assigned.InitiatedBy}}</td>
+                            <td>{{assigned.CreatedBy}}</td>
                             <td>{{assigned.InitiatedOn}}</td>
                             <!-- <td>{{assigned.status}}</td> -->
                             <td><span class="status" [ngClass]="getStatusClass(assigned.Status)">{{assigned.Status}}</span></td>
