--- a/VlimsApp/ClientApp/src/styles.scss
+++ b/VlimsApp/ClientApp/src/styles.scss
@@ -166,6 +166,10 @@ h5.page-card-title{
   background-color: #FF0000;
   color: #ffffff;
 }
+.status-return {
+  background-color: #002aff;
+  color: #ffffff;
+}
 
 .status-pending {
   background-color: #ffd7c0;
