--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -81,7 +81,7 @@
                     >{{ docPreperation.status }}
                   </span>
                 </td>
-                <td class="text-center" *ngIf="access && docPreperation?.status=='IN-PROGRESS'"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a></td>
+                <td class="text-center" *ngIf="access && (docPreperation?.status === 'IN-PROGRESS' || docPreperation?.status === 'Rejected' || docPreperation?.status === 'Returned' || docPreperation?.status==='In-Progress')"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a></td>
                 <td class="text-center" *ngIf="!access">
                   <i class="bi bi-lock bi-lg" 
                   [ngClass]="{'text-primary':true}"
