--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -42,9 +42,9 @@
                  <th pSortableColumn="documentNumber" style="width:20%">Document Number<p-sortIcon field="documentNumber"></p-sortIcon></th>
                  <th pSortableColumn="modifiedDate" style="width:100px">Initiated On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
                  <th pSortableColumn="workflow" style="width:100px">Initiated by <p-sortIcon field="modifiedby"></p-sortIcon></th>
-                 <!-- <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th> -->
-                 <!-- <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th> -->
-                 <!-- <th style="width:80px">Modify</th> -->
+                 <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
+                 <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+                 <th style="width:80px">Modify</th>
    
                </tr>
              </ng-template>
@@ -56,22 +56,24 @@
                  <td>{{doc?.documentNumber}}</td>
                  <td>{{doc?.modifiedDate | date:'dd/MM/yyy'}}</td>
                  <td>{{doc?.modifiedBy}}</td>
-                 <!-- <td>{{doc?.noofcopies}}</td> -->
+                 <td>{{doc?.noofcopies}}</td>
    
-                 <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
-                 <!-- <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td> -->
-                 <!-- <td class="text-center" *ngIf="!access">
+                 <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
+                 <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
+                  <td class="text-center" *ngIf="!access">
                    <i class="bi bi-lock bi-lg" 
                    [ngClass]="{'text-primary':true}"  
                    title="No Permissions">
                    </i>
                  </td>
-                 <td class="text-center" *ngIf="doc?.status==='Approved'">
+                <td class="text-center" *ngIf="doc?.status==='Approved'">
                    <i class="bi bi-lock bi-lg" 
                    [ngClass]="{'text-primary':true}"
                    title="Approved">
                    </i>
-                 </td> -->
+                   <span class="mx-2"></span> 
+                   <i class="bi bi-printer-fill" title="Print" (click)="print(doc)"></i>
+                 </td>
                </tr>
              </ng-template>
            </p-table>
