--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -77,8 +77,8 @@
             </div>
            
           </div>
-
-          <div class="form-group row" *ngIf="request.status=='Rejected' || request.status=='In-Progress' || request.status==''">
+          <div class="form-group row">
+          <!-- <div class="form-group row" *ngIf="request.status=='Rejected' || request.status=='In-Progress' || request.status==''"> -->
             <label for="workflow" class="col-sm-2 col-form-label">Workflow<span
                 style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
