--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -60,7 +60,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
+          <div class="form-group row" *ngIf="print.workflow==''">
             <label for="prefix" class="col-sm-2 col-form-label">Workflow<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
