Added Existing Documents screen

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -13,7 +13,7 @@
     </div>
   <div class="row p-2">
 
-    
+
 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('requests')">
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    
+
 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('effectives')">
@@ -68,6 +68,16 @@
         <div class="card-body">
           <i class="fa fa-print"></i>
           <h5 class="card-title">Existing Document Request</h5>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('existingdocuments')">
+        <div class="card-body">
+          <i class="fa fa-print"></i>
+          <h5 class="card-title">Existing Documents</h5>
         </div>
       </div>
     </div>
