--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -2,8 +2,7 @@
   <div class="row p-2">
     <div class="col">
       <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Existing Document Request Configuration</h4>
-
+        <h4 class="page-title flex-grow-1">Documents Repository</h4>
         <div class="back-icon" style="margin-right: 10px;">
           <a href="javascript:void(0);" onclick="history.back();">
             <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
@@ -39,7 +38,7 @@
             <tr>
               <th>S.No</th>
               <th style="width:80%">ID<p-sortIcon></p-sortIcon></th>
-              <th pSortableColumn="documenttypeprefix" style="width:10%">Document No<p-sortIcon field="documentNo"></p-sortIcon></th>
+              <!--<th pSortableColumn="documenttypeprefix" style="width:10%">Document No<p-sortIcon field="documentNo"></p-sortIcon></th>-->
               <th pSortableColumn="documentName" style="width:20%">Document Name<p-sortIcon field="documentName"></p-sortIcon></th>
               <th pSortableColumn="documentType" style="width:200px">Document Type<p-sortIcon field="documentType"></p-sortIcon></th>
               <th pSortableColumn="department" style="width:200px">Department <p-sortIcon field="department"></p-sortIcon></th>
@@ -55,7 +54,7 @@
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
             <tr>
               <td>{{ i + 1 }}</td>
-              <td>{{doc?.id}}</td>
+              <!--<td>{{doc?.id}}</td>-->
               <td>{{doc?.documentNo}}</td>
               <td>{{doc?.documentName}}</td>
               <td>{{doc?.documentType}}</td>
