Changes of InitiatedBy Value in workitems grid

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -58,7 +58,7 @@
                             <td>{{assigned.TaskName}}</td>
                             <!-- <td>{{assigned.Stage}}</td> -->
                             <!-- <td>{{assigned.assignedGroup}}</td> -->
-                            <td>{{assigned.CreatedBy}}</td>
+                            <td>{{assigned.InitiatedBy}}</td>
                             <td>{{assigned.InitiatedOn}}</td>
                             <td>{{assigned.ActionType}}</td>
                             <!-- <td>{{assigned.status}}</td> -->
