Changes of preview document and existing documents

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -77,7 +77,7 @@
       <div class="card" (click)="navigateTo('existingdocuments')">
         <div class="card-body">
           <i class="fa fa-print"></i>
-          <h5 class="card-title">Existing Documents</h5>
+          <h5 class="card-title">Documents Repository</h5>
         </div>
       </div>
     </div>
