--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="249">
           </div>
 
-          <button class="btn btn-primary mx-2" type="button" *ngIf="access">New</button>
+          <!--<button class="btn btn-primary mx-2" type="button" *ngIf="access">New</button>-->
         </div>
       </div>
     </div>
@@ -42,8 +42,9 @@
               <th pSortableColumn="documentName" style="width:20%">Document Name<p-sortIcon field="documentName"></p-sortIcon></th>
               <th pSortableColumn="documentType" style="width:200px">Document Type<p-sortIcon field="documentType"></p-sortIcon></th>
               <th pSortableColumn="department" style="width:200px">Department<p-sortIcon field="department"></p-sortIcon></th>
-              <th style="width:80px" pSortableColumn="effectiveDate" >Effective Date<p-sortIcon field="createdBy"></p-sortIcon></th>
+              <th style="width:80px" pSortableColumn="effectiveDate">Effective Date<p-sortIcon field="createdBy"></p-sortIcon></th>
               <th pSortableColumn="reviewDate" style="width:20%">Review Date<p-sortIcon field="createdOn"></p-sortIcon></th>
+              <th style="width:80%">Entity Name<p-sortIcon></p-sortIcon></th>
               <th style="width:80%">Actions<p-sortIcon field="modifiedBy"></p-sortIcon></th>
               <th style="width:80%">Preview Document<p-sortIcon field="modifiedOn"></p-sortIcon></th>
             </tr>
@@ -57,7 +58,8 @@
               <td>{{doc?.documentType}}</td>
               <td>{{doc?.department}}</td>
               <td>{{doc?.effectiveDate}}</td>
-              <td>{{doc?.reviewDate}}</td>
+              <td>{{ doc?.reviewDate}}</td>
+              <td>{{doc?.entityName}}</td>
               <td class="text-center" *ngIf="access">
                 <i (click)="editdoc(doc)" class="bi bi-pencil"></i>
               </td>
