--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -33,50 +33,50 @@
                    [paginator]="true" [totalRecords]="existingDocDatasource.length"
                     [rowsPerPageOptions]="rowsPerPageOptions" >
               <ng-template pTemplate="header">
-                  <tr>
-                      <th>S.No</th>
-                      <!-- <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th> -->
-                      <th pSortableColumn="documenttitle" style="width:10%">Document Title<p-sortIcon field="documenttitle"></p-sortIcon></th>
-                      <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
-                      <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
-                      <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                      <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
-                      <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
-                      <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
-                      <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
-                      <th style="width:80px">Actions</th>
-                      <th style="width:80px">Preview Document</th>
+                <tr>
+                  <th>S.No</th>
+                  <!-- <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th> -->
+                  <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
+                  <th pSortableColumn="documenttitle" style="width:10%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
+                  <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
+                  <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+                  <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
+                  <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
+                  <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
+  <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
+                  <th style="width:80px">Actions</th>
+                  <th style="width:80px">Preview Document</th>
 
-                  </tr>
+                </tr>
               </ng-template>
               <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
-                  <tr>  
-                      <td>{{ i + 1 }}</td>  
-                      <!-- <td>{{existingdoc?.edrId}}</td> -->
-                      <td>{{existingdoc?.documenttitle}}</td>
-                      <td>{{existingdoc?.documentno}}</td>
-                      <td>{{existingdoc?.documenttype}}</td>
-                      <td>{{existingdoc?.department}}</td>
-                      <td>{{existingdoc?.effectiveDateValue}}</td>
-                      <!-- <td *ngIf ="existingdoc?.reviewDate=='1/1/1900 12:00:00 AM'">NA</td>
-                      <td *ngIf="existingdoc?.reviewDate!='1/1/1900 12:00:00 AM'">{{existingdoc?.reviewDate| date}}</td> -->
-                      <td >{{existingdoc?.reviewDateValue}}</td>
-                      <!-- <td>{{existingdoc?.approvedby}}</td>
-                      <td>{{existingdoc?.approvedOn| date}}</td> -->
-                      <td class="text-center" *ngIf="access">
-                        <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
-                      </td>
-                      <td *ngIf="!access">
-                        <i class="bi bi-lock bi-lg" 
-                        [ngClass]="{'text-primary':true}"
-                        title="No Permissions">
-                        </i>
-                      </td>
+                <tr>
+                  <td>{{ i + 1 }}</td>
+                  <!-- <td>{{existingdoc?.edrId}}</td> -->
+                  <td>{{existingdoc?.documentno}}</td>
+                  <td>{{existingdoc?.documenttitle}}</td>
+                  <td>{{existingdoc?.documenttype}}</td>
+                  <td>{{existingdoc?.department}}</td>
+                  <td>{{existingdoc?.effectiveDateValue}}</td>
+                  <!-- <td *ngIf ="existingdoc?.reviewDate=='1/1/1900 12:00:00 AM'">NA</td>
+  <td *ngIf="existingdoc?.reviewDate!='1/1/1900 12:00:00 AM'">{{existingdoc?.reviewDate| date}}</td> -->
+                  <td>{{existingdoc?.reviewDateValue}}</td>
+                  <!-- <td>{{existingdoc?.approvedby}}</td>
+  <td>{{existingdoc?.approvedOn| date}}</td> -->
+                  <td class="text-center" *ngIf="access">
+                    <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
+                  </td>
+                  <td *ngIf="!access">
+                    <i class="bi bi-lock bi-lg"
+                       [ngClass]="{'text-primary':true}"
+                       title="No Permissions">
+                    </i>
+                  </td>
 
-                      <td>
-                        <a href="javascript:void(0);" (click)="previewtemplate(template,existingdoc)">Preview</a>
-                      </td>
-                  </tr>
+                  <td>
+                    <a href="javascript:void(0);" (click)="previewtemplate(template,existingdoc)">Preview</a>
+                  </td>
+                </tr>
               </ng-template>
           </p-table>
             </div>
