--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -44,7 +44,7 @@
               <th pSortableColumn="department" style="width:200px">Department<p-sortIcon field="department"></p-sortIcon></th>
               <th style="width:80px" pSortableColumn="effectiveDate">Effective Date<p-sortIcon field="createdBy"></p-sortIcon></th>
               <th pSortableColumn="reviewDate" style="width:20%">Review Date<p-sortIcon field="createdOn"></p-sortIcon></th>
-              <th style="width:80%">Entity Name<p-sortIcon></p-sortIcon></th>
+              <th style="width:80%">Preparation Type<p-sortIcon></p-sortIcon></th>
               <th style="width:80%">Actions<p-sortIcon field="modifiedBy"></p-sortIcon></th>
               <th style="width:80%">Preview Document<p-sortIcon field="modifiedOn"></p-sortIcon></th>
             </tr>
