workitwms duplication resolved

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audittemplategridpage/audittemplategridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audittemplategridpage/audittemplategridpage.component.html
@@ -60,7 +60,7 @@
                             <td>{{doc?.Message }}</td>
                             <td>{{doc?.Type }}</td>
                             <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.CreatedDate }}</td>
+                            <td>{{doc?.CreatedDate }}</td>
                         </tr>
                     </ng-template>
                 </p-table>
