--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-plant-add-page/audit-plant-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-plant-add-page/audit-plant-add-page.component.html
@@ -4,11 +4,11 @@
       <div class="col">
         <div class="d-flex justify-content-between align-items-center">
             <h4 class="page-title"><span class="bold-text">PLANT TYPE</span><br><span class="bold-text">AUDIT TRIALS</span></h4>            
-            <div class="back-icon">
-            <a href="javascript:void(0);" onclick="history.back();">
-              <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-            </a>
-          </div>
+            <div class="back-icon custom-back-icon" style="margin-right: 10px;">      
+              <a href="javascript:void(0);" onclick="history.back();">   
+                <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+              </a>
+            </div>
         </div>
       </div>
     </div>
