--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audithierarchyhomepage/audithierarchyhomepage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audithierarchyhomepage/audithierarchyhomepage.component.html
@@ -7,7 +7,7 @@
   
           <div class="col d-flex justify-content-between align-items-center">
             <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> / Hierarchy Management</h4>  
-            <div class="back-icon" style="margin-right: 10px;">    
+            <div class="back-icon custom-back-icon" style="margin-right: 10px;">      
               <a href="javascript:void(0);" onclick="history.back();">   
                 <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
               </a>
