--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -100,6 +100,22 @@
             <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()">Delete</button>
           </div>
         </div>
+        <div class="form-group row">
+          <label for="templateName" class="col-sm-2 col-form-label">Master Logo</label>
+          <div class="col-sm-10" *ngIf="templateForm.footer==null || templateForm.footer==''">
+            <input type="file"  
+                   class="form-control mw-350"
+                   id="logoUpload" 
+                  (change)="onLogoUpload1($event)" accept="image/*"
+                   z 
+                    
+                      />
+          </div>
+          <div *ngIf="templateForm.footer" class="col-sm-9">
+            {{templateForm.footer}}
+            <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile1()">Delete</button>
+          </div>
+        </div>
       </div>
       </form>
       
