--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.scss
@@ -6,3 +6,23 @@
     height: unset;
     min-width: unset;
   }
+  iframe#icon .icon {
+    display: none;
+}
+
+.actions {
+  padding: 0 16px;
+  min-height: 44px;
+  display: flex;
+  align-items: center;
+}
+.office-viewer {
+  width: 100%;
+  height: calc(100% - 44px);
+  overflow: hidden;
+
+  iframe {
+    /* height: calc(100% - 4px); */
+        height: calc(100% - -22px);
+  }
+}
