--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -59,7 +59,33 @@
                 </div>
             </div>
           </div>
-
+          <div class="form-group row">
+            <label for="workflow" class="col-sm-2 col-form-label"
+              >Print Type<span style="color: red; font-weight: bolder;">*</span></label
+            >
+            <div class="col-sm-10">
+              <!-- <p-multiSelect
+                [options]="stageSource"
+                [(ngModel)]="selectedStage"
+                placeholder="Select Print Type"
+                name="workflowStage"
+                optionLabel="value"
+                display="chip"
+                [required]="true"
+                #documentstage="ngModel">
+              </p-multiSelect>
+              <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+                Document Stage is required
+              </div> -->
+              <p-dropdown name="PrintType" [options]="stageSource" [(ngModel)]="print.printCopy"
+              optionLabel="label" optionValue="label" placeholder="Select Print Type" [autoDisplayFirst]="false" [required]="true"
+              #documentstage="ngModel" [disabled]="viewMode">
+            </p-dropdown>
+            <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+              Print Type is required.
+            </div>
+            </div>
+          </div>
           <div class="form-group row" *ngIf="print.workflow==''">
             <label for="prefix" class="col-sm-2 col-form-label">Workflow<span
               style="color: red; font-weight: bolder;">*</span></label>
