--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditmanagerhomepage/auditmanagerhomepage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditmanagerhomepage/auditmanagerhomepage.component.html
@@ -45,25 +45,25 @@
         </div>
       </div> 
   
-       <div class="col col-lg-3">
+       <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('auditdocumentrevision')">
           <div class="card-body">
             <i class="fa fa-cash-register"></i>
             <h5 class="card-title">Document Revision</h5>
           </div>
         </div>
-      </div> 
+      </div>  -->
    
-      <div class="col col-lg-3">
+      <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('auditdocumentprint')">
           <div class="card-body">
             <i class="fa fa-print"></i>
             <h5 class="card-title">Document Print</h5>
           </div>
         </div>
-      </div> 
+      </div>  -->
   
-       <div class="col col-lg-3">
+       <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('auditexistingdocumentrequests')">
           <div class="card-body">
             <i class="fa fa-print"></i>
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div> 
-  
+   -->
       <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('auditmanager')">
           <div class="card-body">
