--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditadminhome/auditadminhome.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditadminhome/auditadminhome.component.html
@@ -16,15 +16,15 @@
       </div>
   
   
-      <div class="col col-lg-3">
+      <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('security')">
           <div class="card-body">
-            <!-- <i class="fa fa-chart-pie"></i> -->
+            
             <i class="fa fa-code-compare"></i>
             <h5 class="card-title">Security Management </h5>
           </div>
         </div>
-      </div>
+      </div> -->
   
       <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('audithierrachy')">
