--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -54,7 +54,7 @@
                         <td>{{template?.Uniquecode}}</td>
                         <!-- <td>{{template?.Templatename}}</td> -->
                         <td>{{template?.CreatedBy}}</td>
-                        <td>{{template?.CreatedDate | date }}</td>
+                        <td>{{template?.CreatedDate}}</td>
                         <td>
                             <a href="javascript:void(0)" (click)="previewtemplate(template1,template)">Preview</a>
                         </td> 
