--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -54,7 +54,7 @@
                  <td>{{doc?.printtype}}</td>
                  <td>{{doc?.documenttitle}}</td>
                  <td>{{doc?.documentNumber}}</td>
-                 <td>{{doc?.modifiedDate | date:'dd/MM/yyy'}}</td>
+                 <td>{{doc?.modifiedDate}}</td>
                  <td>{{doc?.modifiedBy}}</td>
                  <td>{{doc?.noofcopies}}</td>
    
