--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-request-new-page/audit-request-new-page.component.html
@@ -87,14 +87,14 @@
                   </div>  
 
 
-                  <!-- <div class="row">
+                   <div class="row">
                     <div class="col-sm-3">
                       <strong>Status:</strong>
                     </div>
                     <div class="col-sm-9">
                       {{ auditConfig.EntityInfo.Status }}
                     </div>
-                  </div>   -->
+                  </div>   
 
 
                   
