--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -16,7 +16,7 @@
     </div>
 
 
-    <div class="col col-lg-3">
+    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.securityMgmt">
       <div class="card" (click)="navigateTo('security')">
         <div class="card-body">
           <!-- <i class="fa fa-chart-pie"></i> -->
