--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -52,7 +52,7 @@
                   <!-- <td>{{doc?.Department}}</td> -->
                   <!-- <td>{{doc?.Comments}}</td> -->
                   <td>{{doc?.CreatedBy}}</td>
-                  <td>{{doc?.CreatedDate | date :'dd/MM/yyyy'}}</td>              
+                  <td>{{doc?.CreatedDate}}</td>              
                   
                   <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>           
                   <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
