--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -59,7 +59,7 @@
               <td>{{doc?.PlantAddress}}</td>
               <!-- <td>{{doc?.Comments}}</td> -->
               <td>{{doc?.ModifiedBy}}</td>
-              <td>{{doc?.ModifiedDate | date :'dd/MM/yyyy'}}</td>             
+              <td>{{doc?.ModifiedDate}}</td>             
               <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>
               <td class="text-center" *ngIf="access"><i class="bi bi-pencil" (click)="editdoc(doc)"></i></td>
               <td class="text-center" *ngIf="!access">
