--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -46,7 +46,7 @@
               <th pSortableColumn="reviewDate" style="width:20%">Review Date<p-sortIcon field="createdOn"></p-sortIcon></th>
               <th style="width:80%">Preparation Type<p-sortIcon></p-sortIcon></th>
               <th style="width:80%">Actions<p-sortIcon field="modifiedBy"></p-sortIcon></th>
-              <th style="width:80%">Preview Document<p-sortIcon field="modifiedOn"></p-sortIcon></th>
+              <th style="width:80%">Preview<p-sortIcon field="modifiedOn"></p-sortIcon></th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
