--- a/VlimsApp/ClientApp/src/app/layout/header/header.component.html
+++ b/VlimsApp/ClientApp/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
 
         <div class="header-actions">
             
-           <a class="d-block mx-2 fs-m"> <i class="bi bi-bell"></i></a>
+          <a class="d-block mx-2 fs-m" [routerLink]="'/assigned'"> <i class="bi bi-bell"></i></a>
         </div>
         <div class="d-lg-flex h-100 mx-lg-2 text-white">
           <div class="btn-group user-info-block" dropdown>
