--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -9,6 +9,9 @@
 
     <div class="col col-lg-3">
       <div class="card" (click)="userRole!= 'adminrole' && navigateTo('assigned')">
+        <div class="card-header bg-transparent d-flex justify-content-between border-0">          
+          <span class="ms-auto" style="color: white;"><cite title="Source Title"><small *ngIf="reviewCount || approveCount">Review: {{reviewCount}} <br /> Approve: {{approveCount}}</small></cite></span>
+        </div> 
         <div class="card-body">
           <i class="fa fa-briefcase"></i>
           <h5 class="card-title">
