--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -115,6 +115,7 @@
                           [autoDisplayFirst]="false" #templateInput="ngModel" placeholder="Select Template">
               </p-dropdown>
               <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!='' && !viewMode" href="javascript:void(0)" (click)="edittemplate(preparation.template)">Modify</a>
+              <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!='' && viewMode"  href="javascript:void(0)" (click)="previewtemplate(template)">View Document</a>
               <div *ngIf="templateInput.invalid && (templateInput.dirty || templateInput.touched)" class="text-danger">
                 Template is required
               </div>
@@ -136,13 +137,13 @@
             <div *ngIf="preparation.document" class="col-sm-9">
               <button type="button" class="btn btn-danger mx-2" (click)="onDeleteFile()" [disabled]="viewMode">Delete</button>
             </div>
-          </div> -->
+          </div>
           <div *ngIf="selectedFile && !isUploaded" class="form-group row">
             <label for="document" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onUpload()">Upload</button>
             </div>
-          </div>         
+          </div>          -->
 
           <div class="form-group row">
             <label for="Details" class="col-sm-2 col-form-label">Details</label>
